# example-mcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml
.cursor/: mcp.json
src/marketing_posts/: crew.py  crewai_to_mcp.py  main.py
src/mcp_server/: crewai_to_mcp.py  main.py  mcp_server.py
