[project]
name = "example-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai-tools>=0.38.1",
    "crewai[tools]>=0.108.0",
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"
run_crew = "marketing_posts.main:run"
serve_stdio = "mcp_server.main:run"
serve_sse = "mcp_server.mcp_server:serve_sse"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_posts", "src/mcp_server"]
